# spending-balancer

./: .gitignore  Dockerfile  README.md  admin.py  forms.py  manage.py  models.py  pyproject.toml  run.bash  urls.py  views.py
.github/workflows/: publish-docker.yml
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0004_auto_20181108_1743.py  0005_alter_membership_id_alter_payment_category_and_more.py
core/static/core/: style.css
core/templates/core/: base.html  member_add.html  member_list.html  payment_add.html  payment_category_add.html  payment_detail.html  payment_edit.html  pool.html  sign_in.html
migrations/: 0002_auto_20161031_2007.py  0003_auto_20181108_0246.py
spending_balancer/: asgi.py  settings.py  wsgi.py
static/core/: style.css
templates/core/: base.html  index.html  member_list.html  payment_add.html  payment_category_add.html  payment_category_detail.html  payment_category_list.html  payment_edit.html  payment_list.html  pool_create.html  pool_list.html  register.html
